view/css/levels.css
body {
  background: #fcf700;
  background: radial-gradient(circle, #fcf700 30%, #ff0000 200%);
}
header {
  background-color: #1e1609;
  cursor: pointer;
  border: 5px solid rgb(255, 229, 3);
  border-radius: 19px;
  text-align: center;
  font-family: helvetica;
  font-size: 1.5em;
  color: #03a9f4;
  padding: 9px 21px 9px 21px;
  margin: auto;
  margin-bottom: 7px;
  width: 300px;
  position: relative;
  left: 5px;
  overflow: hidden;
  box-shadow: 0px 6px 10px #2d2413;
}
#number-range {
  font-weight: bolder;
  font-family: Arial, Helvetica, sans-serif;
  /* font-style: italic; */
  color: red;
  text-align: center;
  text-transform: capitalize;
}

#card-number {
  width: 300px;
  margin: auto;
}

#product {
  margin: auto;
  width: 156px;
  position: relative;
  text-align: center;
  top: 30%;
  right: -1%;
  overflow: hidden;
  font-size: 5em;
}

.card {
  cursor: pointer;
  height: 400px;
  width: 300px;
  position: relative;
  border: 6px solid rgb(112, 20, 127);
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: -webkit-transform all 0.8s ease-in-out;
  transition: all 2.2s ease-in-out;
  box-shadow: 0px 6px 10px #4f2c50;
  border-radius: 30px;
  margin: auto;
  z-index: 20;
}

.card div {
  /* position: absolute; */
  /* height: 100%; */
  /* width: 100%; */
  /* background: #FFF; */
  /* text-align: center; */
  /* line-height: 200px; */
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  /* border-radius: 2px; */
}

.card .back {
  /* background: #222; */
  /* color: #FFF; */
  -webkit-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

:checked + .card {
  transform: rotateX(180deg);
  -webkit-transform: rotateX(180deg);
}

:checked + .card {
  transform: rotateX(160deg);
  -webkit-transform: rotateX(360deg) rotateY(-180deg) rotateY(-180deg)
    rotateX(-180deg) rotateX(180deg) rotateY(180deg);
  box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2);
}

/* .card:hover {
  -ms-transform: rotateY(180deg);
  -webkit-transform: rotateX(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateX(360deg) rotateY(-180deg) rotateY(-180deg) rotateX(-180deg)
    rotateX(180deg) rotateY(180deg);
  transition: all 2.2s ease-in-out;
  border: 6px solid rgb(255, 229, 3);
} */

#multiplier {
  margin: auto;
  width: 128px;
  position: relative;
  text-align: right;
  top: 10%;
  right: 0%;
  overflow: hidden;
}
#line {
  width: 61%;
  margin: auto;
}
hr {
  height: 1px;
  border: 3px solid;
  padding: 0;
}
#operator {
  position: relative;
  bottom: -10%;
}
#front_nine {
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  margin: auto;
  /* position: relative; */
  height: 400px;
  width: 300px;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  overflow: hidden;
  text-align: center;
  background-color: #000000c2;
  /* font-size: 5.3em; */
  color: #2196f3;
  border-radius: 23px;
}

#back_nine_ {
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  margin: auto;
  position: relative;
  height: 400px;
  width: 300px;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  text-align: center;
  transform: rotateY(180deg);
  color: #2196f3;
  font-size: 1.5em;
  background-color: #000000c2;
  /* background-color: #ff000059; */
  border-radius: 23px;
  /* display: block; */
  bottom: 400px;
}

#next_ {
  display: none;
  color: rgb(255, 229, 3);
  font-size: 4em;
  position: relative;
  top: 59px;
}
#product-back {
  margin: auto;
  width: 173px;
  position: relative;
  text-align: center;
  top: 30%;
  right: -1%;
  overflow: hidden;
  font-size: 5em;
}

button {
  font-size: 0.9em;
  border: none;
  border: 2px solid rgb(255, 229, 3);
  width: 116px;
  height: 48px;
  text-align: center;
  text-decoration: none;
  color: rgb(33, 150, 243);
  outline-color: rgb(67, 22, 61);
  box-shadow: 0px 6px 10px #2d2413;
  background: #000000c2;
  border-radius: 16px;
}
button:active {
  border: none;
  position: relative;
  top: 3px;
  background: #4c1943;
  color: #7e2972;
  border-radius: 16px;
}
button:focus {
  outline: none;
  box-shadow: 0 0 10px yellow;
}
button:hover {
  background-color: #ffe503;
  color: #000000c2;
  border-radius: 16px;
}
#prev {
  margin-right: 14px;
}

/* label {
  -webkit-perspective: 1000px;
  perspective: 1000px;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  display: block;
  width: 300px;
  height: 200px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  cursor: pointer;
}

.card {
  position: relative;
  height: 100%;
  width: 100%;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: all 600ms;
  transition: all 600ms;
  z-index: 20;
}

.card div {
  position: absolute;
  height: 100%;
  width: 100%;
  background: #fff;
  text-align: center;
  line-height: 200px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  border-radius: 2px;
}

.card .back {
  background: #222;
  color: #fff;
  -webkit-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

label:hover .card {
  -webkit-transform: rotateX(20deg);
  transform: rotateX(20deg);
  box-shadow: 0 20px 20px rgba(50, 50, 50, 0.2);
}

input {
  display: none;
}

:checked + .card {
  transform: rotateX(180deg);
  -webkit-transform: rotateX(180deg);
}

#cola:hover :checked + .card {
  transform: rotateX(160deg);
  -webkit-transform: rotateX(360deg) rotateY(-180deg) rotateY(-180deg)
    rotateX(-180deg) rotateX(180deg) rotateY(180deg);
  box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2);
} */

